--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ __pycache__
 .DS_Store
 project/db.sqlite3
 /static
+project/app/templates
+project/app/templates/templates_for_future/login.html
 project/app/templates/registration/password_change_done.html
 project/app/templates/registration/password_change_form.html
 project/app/templates/registration/password_reset_complete.html
