--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ project/project/email_host_user.txt
 project/app/forms1.py
 project/app/urls1.py
 project/app/templates/base1.html
+project/project/settings1.py
