--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ project/app/forms1.py
 project/app/urls1.py
 project/app/templates/base1.html
 project/project/settings1.py
+project/project/urls1py.py
