--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ project/app/urls1.py
 project/app/templates/base1.html
 project/project/settings1.py
 project/project/urls1py.py
+project/app/views1.py
